# Algo1-C

./: CMakeLists.txt
Activades-y-Practicas/02_-_clase_29-03-2022_estructuras_de_control/: mi_primer_programa.c  mi_segundo_programa.c
Activades-y-Practicas/03_-_clase_31-03-2022_estructuras_de_control/: Ej2.c  Ej3.c  ej1.c
Activades-y-Practicas/04_-_clase_05-04-2022_funciones_y_procedimientos/: funciones.c  intercambiar_piola.c  intercambiar_rancio.c  scanf.c  scanf_2.c  scope.c
Activades-y-Practicas/05_-_clase_07-04-2022_funciones_y_procedimientos/: Machete_punteros.txt  ejercicio1.c  ejercicio2.c
Activades-y-Practicas/06_-_clase_12-04-2022_referencia_y_buenas_practicas/: fizzbuzz.c  nombres_referencia.c  nombres_valor.c  ofuscado.c
Activades-y-Practicas/07_-_clase_19-04-2022_structs_y_bibliotecas/: bibliotecas.c  culculadora.c  culculadora.h  structs.c
Activades-y-Practicas/08_-_clase_21-04-2022_structs_y_bibliotecas/Presencial/: biblio.c  biblio.h  cartas.c  preguntas.c
Activades-y-Practicas/09_-_clase_26-04-2022_vectores_y_matrices/: matrices.c  vectores.c
Activades-y-Practicas/10_-_clase_28-04-2022_vectores_y_matrices/presencial/: arrays.c  sudoku.c
Activades-y-Practicas/10_-_clase_28-04-2022_vectores_y_matrices/virtual/: ej1-3.c  ej1.c  ej2.c
Activades-y-Practicas/11_-_clase_03-05-2022_strings_y_estructuras_anidadas/: estructuras.c  strings.c
Activades-y-Practicas/13_-_clase_10-05-2022_ordenamiento/: hechos_en_clase.c  insercion_ordenada.c  ord_burbujeo.c  ord_insercion.c  ord_seleccion.c  ordenamiento_por_mas_de_un_campo.c
Activades-y-Practicas/13_-_clase_10-05-2022_ordenamiento/__MACOSX/: ._ord_burbujeo.c  ._ord_insercion.c
Activades-y-Practicas/13_-_clase_10-05-2022_ordenamiento/mis_metodos_de_ordenamiento/: bubble_short  bubble_short.c  inserccion_short  inserccion_short.c  selecion  selecion.c
Activades-y-Practicas/14_-_clase_12-05-2022_ordenamiento/: inicializar_ingredientes.c  ratatuile
Activades-y-Practicas/15_-_clase_17-05-2022_eliminacion_busqueda_binaria_y_recursividad/: busqueda_binaria.c  busqueda_binaria_recursiva.c  eliminacion.c  factorial.c  imprimir.c  imprimir_espejo_2.c
Activades-y-Practicas/15_-_clase_17-05-2022_eliminacion_busqueda_binaria_y_recursividad/mis archivos/: busqueda_binaria  busqueda_binaria.c  eliminacion_.c  factorial_.c  imprimir_numeros_.c
Activades-y-Practicas/16_-_clase_19-05-2022_eliminacion_busqueda_binaria_y_recursividad/presencial/: frutas.c  recursividad.c
Activades-y-Practicas/16_-_clase_19-05-2022_eliminacion_busqueda_binaria_y_recursividad/virtual/: frutas.c  recursividad  recursividad.c  tempCodeRunnerFile.c
Activades-y-Practicas/17_-_clase_24-05-2022_recursividad_y_operaciones_entre_vectores/: mezcla  mezcla.c  operaciones  tempCodeRunnerFile.c
Activades-y-Practicas/18_-_clase_26-05-2022_recursividad_y_operaciones_entre_vectores/ej_practica_presencial/: ej1.c  pilones.c
Activades-y-Practicas/18_-_clase_26-05-2022_recursividad_y_operaciones_entre_vectores/virtual/: est_gen.c  matriz_rec  matriz_rec.c  operaciones.c  operaciones.h  pilones.c
Activades-y-Practicas/20_-_clase_07-06-2022_archivos/: argumentos  argumentos.c  config  makefile  saludo.txt  scanf  scanf.c  trabajando_con_archivos_1.c  trabajando_con_archivos_2.c  trabajo_2
Activades-y-Practicas/21_clase_archivos_actividades/: .confing  diario.txt  eje  eje-1  eje.c  eje_1  eje_2  eje_2.c
Activades-y-Practicas/21_clase_archivos_actividades/presencial/: Ejercicio1.c  Ejercicio2.c
Activades-y-Practicas/21_clase_archivos_actividades/virtual/: Ejercici2  Ejercici2.c  Ejericio1.c  diario.txt
Activades-y-Practicas/22_-_clase_09-06-2022_archivos_csv/mio/: animalitos_ordenados.csv  aux_.csv  eje1  eje2  liberen_a_uga.c  makefile  trabajando_con_csv_1.c  trabajando_con_csv_2.c  uga
Activades-y-Practicas/22_-_clase_09-06-2022_archivos_csv/profe/: animales.csv  liberen_a_uga.c  trabajando_con_csv_1._c  trabajando_con_csv_2._c
Activades-y-Practicas/23_clase_archivos_ejercicios/: eje_1  eje_1.c  primos.csv
Activades-y-Practicas/repaso_parcial/: eje_1.c  tuerquita.c  tuerquita.c (2)
Apuntes_Algo_1/: operaciones.c
Parciales/23_-_parcial_01-07-2021_1c-2021/23_-_resolucion_parcial_01-07-2021_1c-2021/Parcial/: 1.c  2.c  3.c  4.c  5.c
Parciales/resuelto/: eje  eje_1.c  eje_2.c  eje_3.c
TPER/TP3-ALGORITMOS-FIUBA-master/: cargar_mapa.c  cargar_mapa.h  dia_en_la_uni.c  enums.h  juego.c  movimientos_personaje.c  papeleo.c
TPER/TP3-ALGORITMOS-FIUBA-master/TP3-ALGORITMOS-FIUBA-master/: cargar_mapa.h  dia_en_la_uni.h  enums.h  juego.c  movimientos_personaje.c  papeleo.c
TPS_ALGO_1/: rotar_matriz  rotar_matriz.c
TPS_ALGO_1/TP2/: juego  juego.c  papeleo.c
TPS_ALGO_1/TP2/zip/: juego.c  papeleo.c  tp1.h
TPS_ALGO_1/TP3/: CMakeLists.txt  juego  juego.c  papeleo.c  tp1.c  tp1.h  tp2.c  tp2.h
TPS_ALGO_1/tps..]_/Algo1mendez-Tp2-2c2021-main/: juego
TPS_ALGO_1/tps..]_/TP2-ALGORITMOS-FIUBA-master/TP2-ALGORITMOS-FIUBA-master/: papeleo.c
TPS_ALGO_1/tps.._/Algo1-TP2-2C2021-master/Algo1-TP2-2C2021-master/: la_sombra_de_mac.c
TPS_ALGO_1/tps.._/Algo1mendez-Tp2-2c2021-main/: juego  juego.c  la_sombra_de_mac.c
TPS_ALGO_1/tps.._/TP2-ALGORITMOS-FIUBA-master/TP2-ALGORITMOS-FIUBA-master/: dia_en_la_uni.h  juego  juego.c
rpl/matrices/: eje_1  eje_1.c  eje_2  eje_2.c  eje_3  eje_3.c  eje_4  eje_4.c  eje_5  eje_5.c  eje_6  eje_6.c  eje_7.c  eje_8.c
rpl/registros/: eje_1.c  eje_2.c  eje_3.c  eje_4.c  eje_5.c
rpl/strings/: eje_1.c  eje_2.c  eje_3.c  eje_4.c  eje_5  eje_5.c  eje_6  eje_6.c  eje_7  eje_7.c  eje_8.c
rpl/vectores/: eje_1.c  eje_10  eje_10.c  eje_2.c  eje_3.c  eje_4.c  eje_5.c  eje_6.c  eje_7.c  eje_8.c  eje_9  eje_9.c  tempCodeRunnerFile.c
tp3_-_multiverso_de_los_papeleos/__MACOSX/: ._tp3_-_multiverso_de_los_papeleos
tp3_-_multiverso_de_los_papeleos/__MACOSX/tp3_-_multiverso_de_los_papeleos/: ._controlador
